Project

General

Profile

Actions

Bug #12524

closed

Excess semicolons in ext/digest and ext/openssl

Bug #12524: Excess semicolons in ext/digest and ext/openssl

Added by ngoto (Naohisa Goto) about 10 years ago. Updated about 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-dev:49692]

Description

ext/digest については r49564 以降、 ext/openssl については r55285 以降、
Solaris 10 上の Oracle Solaris Studio 12.x によるコンパイル時に以下のwarningが出ます。

compiling md5init.c
"md5ossl.h", line 11: warning: syntax error:  empty declaration (E_EMPTY_DECLARATION)
(略)
compiling sha1init.c
"sha1ossl.h", line 18: warning: syntax error:  empty declaration (E_EMPTY_DECLARATION)
(略)
compiling sha2init.c
"sha2ossl.h", line 23: warning: syntax error:  empty declaration (E_EMPTY_DECLARATION)
"sha2ossl.h", line 24: warning: syntax error:  empty declaration (E_EMPTY_DECLARATION)
"sha2ossl.h", line 25: warning: syntax error:  empty declaration (E_EMPTY_DECLARATION)
(略)
compiling ossl_pkey_rsa.c
"ossl_pkey_rsa.c", line 659: warning: syntax error:  empty declaration (E_EMPTY_DECLARATION)
"ossl_pkey_rsa.c", line 660: warning: syntax error:  empty declaration (E_EMPTY_DECLARATION)
"ossl_pkey_rsa.c", line 661: warning: syntax error:  empty declaration (E_EMPTY_DECLARATION)

原因は [Bug #12470] とほぼ同様です。つまり、マクロ使用時の最後のセミコロンが余計で、何も内容の無い行が発生して、empty declaration の警告が出ています。

Actions

Also available in: PDF Atom